2007-03-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/molchrg.cpp: Add new OBPairData descriptor "PartialCharges"
	to express origin as Gasteiger charges.

	* src/formats/qchemformat.cpp, src/formats/mopacformat.cpp, 
	src/formats/gamessformat.cpp, src/formats/gaussformat.cpp: 
	Set PartialCharges descriptor to express origin as Mulliken
	charges.

	* src/formats/mol2format.cpp: Use above.

	* src/*: Strip out 0.0f and similar floating-point casts,
	extending yesterday's changes with forcefield.cpp. Defensive
	programming against similar floating-point issues.

2007-03-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/atom.h, include/openbabel/mol.h: Fix
	PR#1626789 with large PDB files. Fixes regression to 2006-09-25
	changes supporting >2^16 atoms or bonds.
	
	* src/mol.cpp(EndModify): Ensure idx is unsigned (to match atom indexes).

	* include/openbabel/chains.h, src/chains.cpp: Make sure atomids is
	int, not short. Atom IDs can go up to a full unsigned int.

	* src/formats/chemdrawcdx.cpp: Some code cleanups, including use
	of obErrorLog.

	* src/forcefield.cpp: Fix PR#1680717. Seems to be an issue with
	floating-point roundoff. When 0.0f and similar tags were removed,
	works great.

2007-03-16  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/groupcontrib.cpp, include/openbabel/groupcontrib.h: General
	class to handle group contribution algorithms (LogP, TPSA, MR, ...).
	Also contins OBLogP, OBPSA and OBMR. Should these simple classes be
	bundled in a OBDescriptors class?

	* src/logp.cpp, src/psa.cpp, include/openbabel/logp.h,
	include/openbabel/psa.h: moved to groupcontrib.cpp/h

	* data/mr.txt: data for molecular refractivity.

	* test/logp_psa.cpp: forgot to commit.

2007-03-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchiformat.cpp, src/formats/cmlformat.cpp: Fix compile
	problems with GCC and last changes. (Return value from
	OBChiralData should be assigned to a full object.)
